# keycard-shell

./: .clangd  .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  pyproject.toml
.github/workflows/: build.yml
app/: common.h  error.h  freertos_support.c  hal.h  main.c  mem.h  pwr.c  pwr.h
app/bitcoin/: bitcoin.h  compactsize.h  psbt.c  psbt_tx.c
app/camera/: camera.c
app/core/: auth.c  card.c  card.h  core.c  core.h  core_btc.c  core_eth.c  settings.c  settings.h  updater.c
app/crypto/: address.c  aes.c  aes.h  aes_ccm.c  base58.h  bignum.c  bip39.c  bip39.h  ecdsa.c  ecdsa_soft.c  hkdf.c  hkdf.h  hmac.c  nist256p1.h  options.h  pbkdf2.c  rs1024.c  rs1024.h  script.c  secp256k1.h  sha2.c  sha2.h  sha2_soft.h  sha3.c  shamir.c  shamir.h  slip39.c  slip39.h  slip39_english.c  xoshiro256.c
app/crypto/aes/: CM7.h
app/ethereum/: eip712.c  eip712.h  ethUstream.c  ethUstream.h  ethUtils.h  eth_data.c  eth_data.h  eth_db.c  eth_db.h
app/font/: font.h  icons_28px.c  inter_16px.c  inter_20px.c  msg_40px.c  navigation_24px.c  shell_16px.c  shell_18px.c
app/iso7816/: atr.h  pps.c  smartcard.c  smartcard.h  t1.c  t1.h
app/keycard/: application_info.c  application_info.h  command.h  keycard.c  keycard.h  keycard_cmdset.c  keycard_cmdset.h  scv2_whitelist.c  scv2_whitelist.h  secure_channel.c  secure_channel.h  secure_channel_v1.c  secure_channel_v1.h  secure_channel_v2.c  secure_channel_v2.h
app/keypad/: keypad.c
app/qrcode/: qrout.c  qrout.h  qrscan.c
app/screen/: screen.c  screen.h  st7789.h
app/storage/: fs.h  keys.c
app/tasks/: core_task.c  ui_task.c  usb_task.c
app/ui/: dialog.c  dialog.h  english.c  i18n.h  icons.c  icons.h  input.c  input.h  menu.c  menu.h  settings_ui.c  settings_ui.h  theme.h  ui.c  ui.h  ui_internal.h
app/ur/: bytewords.c  sampler.c  sampler.h  ur.c  ur.h  ur_decode.c  ur_decode.h  ur_encode.c  ur_encode.h  ur_types.h
app/usb/: usb.c  usb.h
app/util/: fmath.c  fmath.h  tlv.c
bootloader/: bootloader.c
cddl/: ur.cddl
cmake/: arm-gcc.cmake  stm32-gcc.cmake
docs/: CHANGELOG.md  FLASHMAP.md  USB.md  cube-cheat-sheet.md  shell-db.md
hardware/P2 prototypes/mechanical/parts/: 2282 - 005 - KEYBOARD SLEEVE - MARKING VECTORISE - 20241204.AI.ai  2282 - 011 - CAMERA FOAM - V01 - 20241220.STEP
hardware/card design/: print_sample_RV.ai
hardware/card/design_how_to /: print_sample_RV.indd
hardware/development board/: readme.txt
hardware/development_board/: readme.txt
hardware/development_board/devboard_v1/: keycard_pro_bom.csv
hardware/development_board/devboard_v2/: 3D_KCP-2282-601-PCBV3.8_2026-03-03.step  BOM_01POWER_KCP-2282-601-PCBV3.8_2026-03-03.xlsx  PickAndPlace_KCP-2282-601-PCBV3.8_2026-03-03.xlsx  ProPrj_Segun_O_pcb_2026-03-03.epro
hardware/development_board/devboard_v2/Gerber_KCP-2282-601-PCBV3.8_Fixed_USB/: ProPrj_Segun O pcb fiverr_2026-03-03-Bottom Paste Mask Layer.gbp  ProPrj_Segun O pcb fiverr_2026-03-03-NPTH.drl  ProPrj_Segun O pcb fiverr_2026-03-03-VCC (3).g2  ProPrj_Segun O pcb fiverr_2026-03-03-job.gbrjob  ProPrj_Segun_O_pcb_fiverr_2026-03-03-Board_Outline_Layer.gm1  ProPrj_Segun_O_pcb_fiverr_2026-03-03-Bottom_Layer.gbl  ProPrj_Segun_O_pcb_fiverr_2026-03-03-Bottom_Silkscreen_Layer.gbo  ProPrj_Segun_O_pcb_fiverr_2026-03-03-Bottom_Solder_Mask_Layer.gbs  ProPrj_Segun_O_pcb_fiverr_2026-03-03-GND_2.g1  ProPrj_Segun_O_pcb_fiverr_2026-03-03-PTH.drl  ProPrj_Segun_O_pcb_fiverr_2026-03-03-Top_Layer.gtl  ProPrj_Segun_O_pcb_fiverr_2026-03-03-Top_Paste_Mask_Layer.gtp  ProPrj_Segun_O_pcb_fiverr_2026-03-03-Top_Silkscreen_Layer.gto  ProPrj_Segun_O_pcb_fiverr_2026-03-03-Top_Solder_Mask_Layer.gts  ProPrj_Segun_O_pcb_fiverr_2026-03-03-job.gbrjob
hardware/development_board/devboard_v2/kicad/: 1_01POWER.kicad_sch  2_02MCU.kicad_sch  3_03PERIPHERALS.kicad_sch  4_Folio01.kicad_sch  ProPrj_Seg-easyedapro.kicad_sym  ProPrj_Segun O pcb fiverr_2026-03-03.kicad_pcb  ProPrj_Segun O pcb fiverr_2026-03-03.kicad_prl  ProPrj_Segun O pcb fiverr_2026-03-03.kicad_pro  ProPrj_Segun O pcb fiverr_2026-03-03.kicad_sch  ProPrj_Segun_O_pcb_fiverr_2026-03-03.kicad_pcb  ProPrj_Segun_O_pcb_fiverr_2026-03-03.kicad_prl  ProPrj_Segun_O_pcb_fiverr_2026-03-03.kicad_pro  ProPrj_Segun_O_pcb_fiverr_2026-03-03.kicad_sch  fp-lib-table  sym-lib-table
hardware/development_board/devboard_v2/kicad/ProPrj_Segun O pcb fiverr_2026-03-03.pretty/: 0402 - CAPACITOR.kicad_mod  0402 - RESISTOR.kicad_mod  0603 - CAPACITOR.kicad_mod  0805 - CAPACITOR.kicad_mod  0805 - FUSE.kicad_mod  ANTENK U6252-35C.kicad_mod  C0402.kicad_mod  CHILISON BWF00252012.kicad_mod  DEGRAPAGE 4 X 0.5.kicad_mod  FPC-SMD_6P-P1.00_HDGC_1.0-B-6PWB.kicad_mod  GCT FFC2B35-12-G.kicad_mod  HCTL HC-FPC-05-09-24RLTAG.kicad_mod  JUSHUO AFA07-S15FCC-00.kicad_mod  LOGO_ESD_OVERLAY.kicad_mod  LOGO_ROHS_OVERLAY.kicad_mod  MIRE.kicad_mod  ON SEMI NCV8160AMX330TBG.kicad_mod  OSRAM LRY8SFU1V21.kicad_mod  PLAGE - NOIRE.kicad_mod  PLAGE - ROUGE.kicad_mod  QFN14-0.5-3S4.kicad_mod  R0402.kicad_mod  SD-SMD_5145300-3.kicad_mod  SOD-123_L2.7-W1.6-LS3.7-RD-1.kicad_mod  SOD-523_L1.2-W0.8-LS1.6-RD.kicad_mod  SOD123 DIODE INC.kicad_mod  (+20 more)
hardware/pilot-run/electronics-and-bom/KCP-2282-60x-V3.7.8/: KCP-2282-603 BOM V3.8.xlsx  ~$KCP-2282-603 BOM V3.8.xlsx
hardware/shell/: readme.md
hardware/shell/prototype_P2/bill_of_material/: P2282-BOMPCBA.xlsx
hardware/shell/serial_run/LISTOFPARTS/: P2282_STATUSKeycardSHELL-BOMPRODUCT-V17.xlsx
hardware/shell/serial_run/MECHANICAL/: 2282-005-KEYBOARDSLEEVE-MARKINGVECTORISE-20250310.ai
json/: abi.json
stm32/: .mxproject  stm32.ioc
stm32/Core/Inc/: linked_list.h  main.h  stm32.h  stm32_internal.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
stm32/Core/Src/: linked_list.c  main.c  stm32.c  stm32_camera.c  stm32_crypto.c  stm32_flash.c  stm32_usb.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
test/: core_task.c  ui_task.c
tools/: abi.py  bootloader-perso.py  common.py  create-image.py  database-hash.py  device-csv.py  download-toolchain.sh  firmware-hash.py  firmware-sign.py  keycardsign.py  requirements.txt  shell-db.py  token-db.py  tokens.py  zcbor-gen.sh
(+183 files in other folders)
